17/12/09 Julien Dutheil
* Code cleaning for VectorSiteContainer
* New class CompressedVectorSiteContainer using less memory than
  VectorSiteContainer, but more restricted.

16/11/09 Sylvain Gaillard
* No more "using namespace" in header files.

04/11/09 Julien Dutheil
* Remove SymbolListTools::randomizeContent to a more efficient SymbolList::shuffle
method.

12/10/09 Julien Dutheil
* Now SeqLib compiles with -Weffc++ and -Wshadow without any warning :)

22/09/09 Julien Dutheil
* Finally added 'addSequence' method in SequenceContainer.
* MapSequenceContainer now has a addSequence method that uses the name of the
  sequence as a key by default.
* Several methods in Sequence/SiteContainerTools are not templated anymore and
  have been improved.

09/09/09 Sylvain Gaillard
* Fixed white space skip in Fasta sequence

20/08/09 Julien Dutheil
* Added config files for CMake.

19/08/09 Sylvain Gaillard
* Introduced 3 new interfaces IOSequenceStream, ISequenceStream and
  OSequenceStream. These interfaces are intended to be used by IOFormat
  dealing with Sequence and not SequenceContainers. They are actually
  implemented by the Fasta class.

17/08/09 Adam Smith
* Bug fixed in DefaultAlphabet: unknow state is 37 not 38.

04/08/09 Sylvain Gaillard
* Introduced new classes for Alphabet States

23/07/09 Sylvain Gaillard
* Added SequenceTools::getPutativeHaplotypes

22/07/09 Sylvain Gaillard
* Added SequenceTools::getNumberOfUnresolvedSites
* Updated SequenceTools::getNumberOfSites,
	SequenceTools::getNumberOfCompleteSites and SequenceTools::removeGaps to be
	Alphabet implementation independant.

07/07/07 Julien Dutheil
* Updated GranthamAAChemicalDistance, with a new signed, non-symmetric,
	option.

26/06/09 Sylvain Gaillard
* Added new SequencePositionIterators classes.

23/06/09 Julien Dutheil
* Actualization of the Container classes: now returns references and not
pointer. Several code updates, including copy contructors.

17/06/09 Sylvain Gaillard (Glasgow Workshop)